# Vulkan-ValidationLayers

./: .appveyor.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gn  .travis.yml  BUILD.gn  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT.txt  GOVERNANCE.md  LAYER_CONFIGURATION.md  LICENSE.txt  README.md  REUSE.toml  RUN_PORTABILITY_VALIDATION.sh  blacklist.json  jitpack.yml  subvuid.py  update_external_sources.bat  update_external_sources.sh  vcpkg.json
layers/: CMakeLists.txt  README.md  VkLayer_khronos_validation.json.in  VkLayer_object_lifetimes.def  VkLayer_object_tracker.def  VkLayer_parameter_validation.def  VkLayer_portability_validation.def  VkLayer_threading.def  android_ndk_types.h  base_node.cpp  base_node.h  best_practices.cpp  best_practices.h  best_practices_error_enums.h  best_practices_utils.cpp  best_practices_validation.h  buffer_state.cpp  buffer_state.h  buffer_validation.cpp  buffer_validation.h  cast_utils.h  chassis_dispatch_manual.cpp  cmd_buffer_state.cpp  cmd_buffer_state.h  command_counter.h  common_build.cmake  convert_to_renderpass2.cpp  convert_to_renderpass2.h  core_dispatch.cpp  core_error_location.cpp  core_error_location.h  core_validation.cpp  core_validation.h  core_validation_error_enums.h  core_validation_layer.md  core_validation_types.h  debug_printf.cpp  debug_printf.h  descriptor_sets.cpp  descriptor_sets.h  (+127 more)
layers/android/: CMakeLists.txt
layers/best_practices/: CMakeLists.txt  best_practices_error_enums.h  best_practices_utils.cpp  best_practices_validation.h  bp_buffer.cpp  bp_cmd_buffer.cpp  bp_cmd_buffer_nv.cpp  bp_constants.h  bp_copy_blit_resolve.cpp  bp_descriptor.cpp  bp_device_memory.cpp  bp_drawdispatch.cpp  bp_framebuffer.cpp  bp_image.cpp  bp_instance_device.cpp  bp_pipeline.cpp  bp_ray_tracing.cpp  bp_render_pass.cpp  bp_state.cpp  bp_state.h  bp_state_tracker.cpp  bp_synchronization.cpp  bp_utils.cpp  bp_utils.h  bp_video.cpp  bp_wsi.cpp  my_example_practice.cpp  my_example_practice.h
layers/chassis/: chassis.h  chassis_handle_data.h  chassis_manual.cpp  chassis_modification_state.h  dispatch_object.h  dispatch_object_manual.cpp  layer_chassis_dispatch_manual.cpp  layer_object_id.h  validation_object.h
layers/containers/: array_range_map.h  container_utils.h  custom_containers.h  limits.h  qfo_transfer.cpp  qfo_transfer.h  range.h  range_map.h  range_vector.h  small_container.h  small_range_map.h  small_vector.h  span.h  subresource_adapter.cpp  subresource_adapter.h  tls_guard.h
layers/core_checks/: android_validation.cpp  buffer_validation.cpp  cc_android.cpp  cc_buffer.cpp  cc_buffer_address.h  cc_cmd_buffer.cpp  cc_cmd_buffer_dynamic.cpp  cc_copy_blit_resolve.cpp  cc_data_graph.cpp  cc_descriptor.cpp  cc_device.cpp  cc_device_generated_commands.cpp  cc_device_memory.cpp  cc_drawdispatch.cpp  cc_external_object.cpp  cc_image.cpp  cc_image_layout.cpp  cc_pipeline.cpp  cc_pipeline_compute.cpp  cc_pipeline_graphics.cpp  cc_pipeline_ray_tracing.cpp  cc_query.cpp  cc_queue.cpp  cc_ray_tracing.cpp  cc_ray_tracing_micromap.cpp  cc_ray_tracing_nv.cpp  cc_render_pass.cpp  cc_shader.cpp  cc_shader.h  cc_shader_interface.cpp  cc_shader_object.cpp  cc_spirv.cpp  cc_state_tracker.cpp  cc_state_tracker.h  cc_submit.cpp  cc_submit.h  cc_sync_vuid_maps.cpp  cc_sync_vuid_maps.h  cc_synchronization.cpp  cc_synchronization.h  (+43 more)
layers/drawdispatch/: descriptor_heap_validator.cpp  descriptor_heap_validator.h  descriptor_validator.cpp  descriptor_validator.h  drawdispatch_vuids.cpp  drawdispatch_vuids.h
layers/error_message/: core_error_location.cpp  core_error_location.h  error_location.cpp  error_location.h  error_strings.cpp  error_strings.h  log_message_type.h  logging.cpp  logging.h  record_object.h  spirv_logging.cpp  spirv_logging.h  unimplementable_validation.h  validation_error_enums.h
layers/explicit/: explicit_validation.h  explicit_validation_utils.cpp
layers/generated-vksc/: best_practices.cpp  best_practices.h  chassis.h  (+28 more)
scripts/: CMakeLists.txt  android.py  antialias_source.py  best_practices_chassis_generator.py  best_practices_generator.py  build_with_extension.py  check_code_format.py  check_code_format.sh  check_commit_message_format.sh  clang-format-diff.py  cmake_test_min.py  command_counter_generator.py  command_validation_generator.py  common_ci.py  common_codegen.py  dispatch_table_helper_generator.py  dynamic_state_generator.py  explicit_validation_generator.py  external_revision_generator.py  format_utils_generator.py  generate_settings.py  generate_source.py  generate_spec_error_message.py  generate_spirv.py  github_ci_android.py  github_ci_build_desktop.py  github_ci_gn.py  github_ci_win.py  github_ci_win_linux.py  gn.py  helper_file_generator.py  inspect_gpuav_spirv.py  jitpack.py  known_good.json  layer_chassis_dispatch_generator.py  layer_chassis_generator.py  layer_dispatch_table_generator.py  loader_extension_generator.py  lvl_genvk.py  lvt_file_generator.py  (+32 more)
tests/: BUILD.gn  CMakeLists.txt  README.md  _run_all_tests.ps1  _vkvalidatelayerdoc.ps1  icd-spv.h  layer_validation_tests.cpp  layer_validation_tests.h  loader_validation_tests.cpp  ray_tracing_objects.cpp  ray_tracing_objects.h  run_all_tests.sh  run_loader_tests.sh  test_common.h  test_environment.cpp  test_environment.h  vkerrormonitor.cpp  vkerrormonitor.h  vklayertest.cpp  vklayertests.cpp  vklayertests_amd_best_practices.cpp  vklayertests_android_hardware_buffer.cpp  vklayertests_arm_best_practices.cpp  vklayertests_best_practices.cpp  vklayertests_buffer.cpp  vklayertests_buffer_image_memory_sampler.cpp  vklayertests_command.cpp  vklayertests_debug_printf.cpp  vklayertests_descriptor_renderpass_framebuffer.cpp  vklayertests_dynamic_rendering.cpp  vklayertests_external_memory_sync.cpp  vklayertests_gpu.cpp  vklayertests_graphics_library.cpp  vklayertests_image.cpp  vklayertests_imageless_framebuffer.cpp  vklayertests_instanceless.cpp  vklayertests_memory.cpp  vklayertests_nvidia_best_practices.cpp  vklayertests_object_lifetime.cpp  vklayertests_others.cpp  (+25 more)
(+1440 files in other folders)
